--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,7 +15,7 @@ Version: 1.0.0
     --blackbg: #000000;
     --white: #fff;
     --spantext: #757575;
-    --theme: #E3FF04;
+    --theme:  #04b9ff;
     --theme2: #FF7425;
     --bg1: #161616;
     --bg2: #1b1b1b;
@@ -1714,7 +1714,7 @@ footer {
 
 .hero-section-version2 {
     padding: 190px 2px 130px;
-    background: url(../img/banner/hero-v2bg.png) no-repeat center center;
+    background: url(../img/banner/b587eb9c-02c1-49c3-a803-9d6fd2352344.png) no-repeat center center;
     background-size: cover;
     z-index: 1;
 }
@@ -5424,7 +5424,7 @@ footer {
 .footer-widgets-wrapper.style-3 .single-footer-widget .widget-head h3 {
     padding-bottom: 20px;
     border-bottom: 2px solid transparent;
-    border-image: linear-gradient(90deg, #E3FF04 4.85%, rgba(227, 255, 4, 0) 96.39%);
+    border-image: linear-gradient(90deg,  #04b9ff 4.85%, rgba(227, 255, 4, 0) 96.39%);
     border-bottom: 2px solid transparent;
     border-image-slice: 2;
 }
@@ -6070,12 +6070,12 @@ footer {
 }
 
 .header-sectionv2.header-fixed {
-    background: #e3ff04 !important;
+    background:  #04b9ff !important;
 }
 
 @media (max-width: 991px) {
     .header-sectionv2.header-fixed {
-        background: #e3ff04 !important;
+        background:  #04b9ff !important;
         z-index: 9999 !important;
     }
 }
@@ -6115,7 +6115,7 @@ footer {
 
 @media (max-width: 991px) {
     .header-sectionv2 {
-        background: #e3ff04;
+        background: #04b9ff;
     }
     .header-sectionv2 .search-trigger {
         font-size: 19px !important;
@@ -7217,7 +7217,7 @@ input.main-search-input::placeholder {
     content: "";
     width: 100%;
     height: 60px;
-    background: linear-gradient(90deg, #E3FF04 0%, rgba(239, 100, 76, 0.1) 60.08%);
+    background: linear-gradient(90deg,  #04b9ff 0%, rgba(239, 100, 76, 0.1) 60.08%);
     border-radius: 100px;
     z-index: -1;
     opacity: 0;
@@ -7911,7 +7911,7 @@ input.main-search-input::placeholder {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(180deg, rgba(239, 100, 76, 0) 64.05%, #e3ff04 115.68%);
+    background: linear-gradient(180deg, rgba(239, 100, 76, 0) 64.05%,  #04b9ff 115.68%);
     transition: all 0.5s;
 }
 
@@ -7971,7 +7971,7 @@ input.main-search-input::placeholder {
 
 .team-card01:hover .thumb::before {
     bottom: 0;
-    background: linear-gradient(180deg, rgba(239, 100, 76, 0) 64.05%, #e3ff04 115.68%);
+    background: linear-gradient(180deg, rgba(239, 100, 76, 0) 64.05%, #04b9ff 115.68%);
 }
 
 .team-card01:hover .thumb .common-social {
