--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6070,12 +6070,12 @@ footer {
 }
 
 .header-sectionv2.header-fixed {
-    background:  #04b9ff !important;
+    background: #56c1eb !important;
 }
 
 @media (max-width: 991px) {
     .header-sectionv2.header-fixed {
-        background:  #04b9ff !important;
+        background:  #56c1eb !important;
         z-index: 9999 !important;
     }
 }
@@ -6115,7 +6115,7 @@ footer {
 
 @media (max-width: 991px) {
     .header-sectionv2 {
-        background: #04b9ff;
+        background: #56c1eb;
     }
     .header-sectionv2 .search-trigger {
         font-size: 19px !important;
